# IPO-Readiness-PDF-Analyzer

./: CHAT_FEATURE_README.md  LICENSE  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  setup.bat  setup.sh  start-dev.bat  start-dev.sh
backend/: .gitignore  Dockerfile  env.example  pyproject.toml  render.yaml  requirements.txt  run.py  test_backend.py  test_llamaparse.py  vercel.json
backend/app/: chat_service.py  ipo_analyzer.py  main.py  pdf_processor.ipynb  pdf_processor.py
backend/app/models/: chat_models.py  pdf_extraction_models.py  response_models.py
backend/prompts/: chat_prompt.j2  ipo_analysis_prompt.j2  pdf_extraction_prompt.j2
frontend/: .gitignore  package-lock.json  package.json  vercel.json
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: AnalysisResults.tsx  ChatInterface.tsx  LoadingSpinner.tsx  PDFUploader.tsx
frontend/src/lib/: config.ts
